# cangjie-build-repair-kit

./: .gitignore  CONTRIBUTING.md  PROJECT_OVERVIEW_CN.md  README.md  pyproject.toml
.github/: pull_request_template.md
adapters/: base.py  cjpm_adapter.py  hvigor_adapter.py
configs/: policy.default.toml  project.helloworld.toml  project.nonui.context7.sample.toml  project.nonui.sample.toml
docs/: agent_issue_pr_workflow.md  development_assessment_and_followup.md  git_and_release_workflow.md  mvp_safe_mode_and_repairing.md  portability_validation_2026-03-02.md  session_snapshot.md  weekly_model_report.md
driver/: contracts.py  doc_maintenance.py  env_setup.py  failure_cases.py  issue_autopilot.py  loop.py  main.py  packaging.py  preflight.py  reporting.py  session_snapshot.py  state_store.py  verifier.py  weekly_report.py
knowledge/: cangjie_recipes.md  error_patterns.yaml  mcp_provider.py  project_conventions.md  providers.py  retriever.py
prompts/: propose_fix.txt  summarize_failure.txt
repair/: error_parser.py  patcher.py  planner.py  validators.py
scripts/: build_release.ps1  build_release.sh  doc_update.ps1  doc_update.sh  issue_autopilot.sh  session_snapshot.ps1  session_snapshot.sh  start_issue_branch.sh
tests/: test_bootstrap_nonui.py  test_doc_maintenance.py  test_dual_gate_adapters.py  test_error_parser.py  test_error_schema.py  test_failure_case_archive.py  test_failure_case_reference.py  test_failure_case_retrieval.py  test_failure_cases.py  test_issue_autopilot.py  test_knowledge_provider.py  test_llm_strategy_schema.py  test_mcp_provider.py  (+21 more)
(+27 files in other folders)
